--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
     ],
     "require": {
         "php": ">=5.6",
+        "monolog/monolog": "^1.17",
         "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "slim/twig-view": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0"
+    },
+    "autoload": {
+        "files": ["src/util.php"]
     },
     "autoload-dev": {
         "psr-4": {
