Fix stylesheets browser parse, removed dev template caching

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,15 +7,31 @@ events {
 http {
     index    index.html index.htm index.php;
 
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
     server { # php/fastcgi
         listen       80;
         root         /usr/src/app/public;
 
+        location / {
+            try_files $uri /index.php$is_args$args;
+        }
+
         location ~ \.php$ {
-            try_files       $uri = 404;
-            include         fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_pass    app:9000;
+            try_files               $uri = 404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            include                 fastcgi_params;
+            fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_index           index.php;
+            fastcgi_pass            app:9000;
+
+            # Mitigate https://httpoxy.org/ vulnerabilities
+            fastcgi_param HTTP_PROXY "";
+        }
+
+        location ~ ^/(images|javascript|js|css|flash|media|static)/  {
+            expires 30d;
         }
     }
 }
