--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -21,7 +21,7 @@ rtmp {
             hls_fragment_naming timestamp;
             hls_playlist_length 10s;
             hls_path /tmp/nginx/hls;
-            hls_base_url https://rn.barricas.rocks/hls/;
+            hls_base_url http://localhost/hls/;
         }
     }
 }
