--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=5.6",
         "monolog/monolog": "^1.17",
+        "robmorgan/phinx": "^0.10.8",
         "slim/slim": "^3.1",
         "slim/twig-view": "^2.5"
     },
