--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
+        "illuminate/database": "^5.8",
         "monolog/monolog": "^1.17",
         "robmorgan/phinx": "^0.10.8",
         "slim/slim": "^3.1",
@@ -26,6 +27,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "App\\": "src/",
             "Tests\\": "tests/"
         }
     },
