Add user login & seed admin. Control access to stream list & redirect to default stream on fail. Refactor routes to separate files.

--- a/phinx.yml
+++ b/phinx.yml
@@ -1,5 +1,6 @@
 paths:
   migrations: '%%PHINX_CONFIG_DIR%%/src/database/migrations'
+  seeds: '%%PHINX_CONFIG_DIR%%/src/database/seeds'
 
 environments:
   default_migration_table: phinxlog
