Make the app work with default configurations. Allow hls playback

--- a/nginx/origin/Dockerfile
+++ b/nginx/origin/Dockerfile
@@ -1,5 +1,17 @@
 FROM dvdgiessen/nginx-rtmp-docker
 
-COPY nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
 
-RUN chmod 644 /etc/nginx/nginx.conf
+ENV HLS_URL=http://localhost:8181/hls/ \
+    HLS_FRAGMENT=2s \
+    HLS_PLAYLIST_LENGTH=10s \
+    CORS_URL=*
+
+RUN apk --no-cache add gettext
+
+COPY nginx.conf /etc/nginx/nginx.conf.template
+COPY entrypoint.sh /entrypoint.sh
+
+RUN chmod 644 /etc/nginx/nginx.conf.template && mkdir -p /tmp/nginx/client-body
+
+ENTRYPOINT [ "/entrypoint.sh" ]
