--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -1,7 +1,30 @@
 user nginx;
 worker_processes auto;
 
-events {}
+events {
+    worker_connections  1024;
+}
+
+http {
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+
+    server {
+        listen 80;
+        root /tmp/hls;
+
+        location /hls {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+            }
+
+            alias /tmp/hls;
+            add_header Cache-Control no-cache;
+
+            add_header Access-Control-Allow-Origin ${CORS_URL};
+        }
+    }
+}
 
 rtmp {
     server {
@@ -17,11 +40,11 @@ rtmp {
             sync 10ms;
 
             hls on;
-            hls_fragment 2s;
+            hls_fragment ${HLS_FRAGMENT};
             hls_fragment_naming timestamp;
-            hls_playlist_length 10s;
-            hls_path /tmp/nginx/hls;
-            hls_base_url http://localhost/hls/;
+            hls_playlist_length ${HLS_PLAYLIST_LENGTH};
+            hls_path /tmp/hls;
+            hls_base_url ${HLS_URL};
         }
     }
 }
