--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -4,7 +4,7 @@ ENV ENV=DEV \
     APP_NAME='Stream Demo' \
     DEFAULT_STREAM=ezstream \
     STREAM_FLASH_URL=rtmp://localhost/stream/%stream% \
-    STREAM_HLS_URL=http://localhost/hls/%stream%.m3u8
+    STREAM_HLS_URL=http://localhost:8181/hls/%stream%.m3u8
 
 WORKDIR /usr/src/app
 
