Add missing env for the default seeded user

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -5,6 +5,7 @@ VOLUME [ "/usr/src/app/data" ]
 ENV ENV=DEV \
     APP_NAME='Stream Demo' \
     DEFAULT_STREAM=ezstream \
+    DEFAULT_PASSWORD=ezstream \
     STREAM_FLASH_URL=rtmp://localhost/stream/%stream% \
     STREAM_HLS_URL=http://localhost:8181/hls/%stream%.m3u8
 
