Use default stream as seeded user name; add password algo to env vars

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -6,6 +6,7 @@ ENV ENV=DEV \
     APP_NAME='Stream Demo' \
     DEFAULT_STREAM=ezstream \
     DEFAULT_PASSWORD=ezstream \
+    PASSWORD_ALGO= \
     STREAM_FLASH_URL=rtmp://localhost/stream/%stream% \
     STREAM_HLS_URL=http://localhost:8181/hls/%stream%.m3u8
 
