--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ image:
   name: docker/compose:1.22.0
   entrypoint: ["/bin/sh", "-c"]
 
+variables:
+    DOCKER_HOST: tcp://localhost:2376/
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: "/certs"
+
 services:
     - docker:dind
 
