--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image:
   entrypoint: ["/bin/sh", "-c"]
 
 variables:
-    DOCKER_HOST: tcp://localhost:2376/
+    DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
 
