--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     ],
     "require": {
         "php": ">=5.6",
+        "defuse/php-encryption": "^2.2",
+        "dflydev/fig-cookies": "^2.0",
         "illuminate/database": "^5.8",
         "monolog/monolog": "^1.17",
         "nesbot/carbon": "^2.26",
