Fix nginx css cache issue. Add chromecast support.

--- a/nginx/app/nginx.conf
+++ b/nginx/app/nginx.conf
@@ -32,6 +32,7 @@ http {
 
         location ~ ^/(images|javascript|js|css|flash|media|static)/  {
             expires 30d;
+            sendfile off;
         }
     }
 }
