--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   nginx:
-    build: 
+    build:
       context: ./
       dockerfile: ./nginx/app/Dockerfile
     ports:
       - 8080:80
     volumes:
       - .:/usr/src/app
-    links: 
+    links:
       - app
 
   origin:
@@ -22,6 +22,9 @@ services:
     build:
       context: ./
       dockerfile: ./fpm/Dockerfile
+    environment:
+      - STREAM_FLASH_URL=rtmp://192.168.1.33/stream/%stream%
+      - STREAM_HLS_URL=http://192.168.1.33:8181/hls/%stream%.m3u8
     volumes:
       - .:/usr/src/app
       - ./data:/usr/src/app/data
