Allow only user with account to publish streams

--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -45,6 +45,10 @@ rtmp {
             hls_playlist_length ${HLS_PLAYLIST_LENGTH};
             hls_path /tmp/hls;
             hls_base_url ${HLS_URL};
+
+            deny play all;
+
+            on_publish http://nginx/origin/publish;
         }
     }
 }
