--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=5.6",
+        "akrabat/ip-address-middleware": "^2.0",
         "defuse/php-encryption": "^2.2",
         "dflydev/fig-cookies": "^2.0",
         "illuminate/database": "^5.8",
