--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -13,15 +13,23 @@ http {
         listen 80;
         root /tmp/hls;
 
+        types {
+            application/vnd.apple.mpegurl m3u8;
+        }
+
         location /hls {
-            types {
-                application/vnd.apple.mpegurl m3u8;
-            }
+            add_header Cache-Control no-cache;
+            add_header Access-Control-Allow-Origin ${CORS_URL};
 
             alias /tmp/hls;
-            add_header Cache-Control no-cache;
 
-            add_header Access-Control-Allow-Origin ${CORS_URL};
+            location ~ ([a-zA-Z0-9]+)\.m3u8$ {
+                secure_link $arg_token,$arg_expires;
+                secure_link_md5 "$arg_expires $remote_addr $1 ${SECURE_LINK_SECRET}";
+
+                if ($secure_link = "") { return 403; }
+                if ($secure_link = "0") { return 403; }
+            }
         }
     }
 }
