--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -13,6 +13,9 @@ http {
         listen 80;
         root /tmp/hls;
 
+        set_real_ip_from  ${TRUSTED_PROXY};
+        real_ip_header    ${REAL_IP_HEADER};
+
         types {
             application/vnd.apple.mpegurl m3u8;
         }
