Add HLS rate limiting

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -9,7 +9,7 @@ ENV ENV=DEV \
     DEFAULT_PASSWORD=ezstream \
     PASSWORD_ALGO= \
     STREAM_FLASH_URL=rtmp://localhost/stream/%stream% \
-    STREAM_HLS_URL=http://localhost:8181/hls/%stream%.m3u8?expires=%expire%&token=%token% \
+    STREAM_HLS_URL=http://localhost:8181/hls/%stream%.m3u8?expires=%expire%&token=%token%&user=%user% \
     SECURE_LINK_SECRET=secret \
     SECURE_LINK_TTL=1800 \
     TOKEN_SIZE=5 \
