--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -9,6 +9,8 @@ http {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
+    limit_req_zone $arg_user zone=stream:1m rate=${HLS_REQ_PER_SEC}r/m;
+
     server {
         listen 80;
         root /tmp/hls;
@@ -28,10 +30,12 @@ http {
 
             location ~ ([a-zA-Z0-9]+)\.m3u8$ {
                 secure_link $arg_token,$arg_expires;
-                secure_link_md5 "$arg_expires $remote_addr $1 ${SECURE_LINK_SECRET}";
+                secure_link_md5 "$arg_expires $remote_addr $1 $arg_user ${SECURE_LINK_SECRET}";
 
                 if ($secure_link = "") { return 403; }
                 if ($secure_link = "0") { return 403; }
+
+                limit_req zone=stream burst=${HLS_REQ_BURST} nodelay;
             }
         }
     }
