--- a/nginx/origin/Dockerfile
+++ b/nginx/origin/Dockerfile
@@ -5,6 +5,8 @@ EXPOSE 80
 ENV HLS_URL=http://localhost:8181/hls/ \
     HLS_FRAGMENT=2s \
     HLS_PLAYLIST_LENGTH=10s \
+    HLS_REQ_PER_SEC=20 \
+    HLS_REQ_BURST=5 \
     SECURE_LINK_SECRET=secret \
     CORS_URL=* \
     TRUSTED_PROXY=172.16.0.0/12 \
