use ip variable from realip module

--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -30,7 +30,7 @@ http {
 
             location ~ ([a-zA-Z0-9]+)\.m3u8$ {
                 secure_link $arg_token,$arg_expires;
-                secure_link_md5 "$arg_expires $remote_addr $1 $arg_user ${SECURE_LINK_SECRET}";
+                secure_link_md5 "$arg_expires $realip_remote_addr $1 $arg_user ${SECURE_LINK_SECRET}";
 
                 if ($secure_link = "") { return 403; }
                 if ($secure_link = "0") { return 403; }
