Update flags when starting/stopping streams

--- a/nginx/origin/nginx.conf
+++ b/nginx/origin/nginx.conf
@@ -64,6 +64,7 @@ rtmp {
             deny play all;
 
             on_publish http://nginx/origin/publish;
+            on_publish_done http://nginx/origin/publish-done;
         }
     }
 }
